--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div id="slide">
 			<h1>Lorem </h1>
 			<p>ipsum dolor sit amet</p>
-			<h3> ALTERAÇÃO</h3>
+			<h3> ALTERAÇÃO brabissimaa chernobyl</h3>
 		</div>
 	</section>
 	<!-- Fim do Slide -->
