--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<h1>Lorem </h1>
 			<p>ipsum dolor sit amet</p>
 			<h3> ALTERAÇÃO brabissimaa chernobyl</h3>
+			<h3>HARDCORE </h3>
 		</div>
 	</section>
 	<!-- Fim do Slide -->
